--- a/contact.html
+++ b/contact.html
@@ -32,14 +32,14 @@
 </style>
       <h2> Don't be shy!</h2>
 
-<a href="https://www.linkedin.com/in/alejandroscaffa" target="_blank"><img src="linkedinlogo.png" id="icon" align="right"></a>
-<a href="https://www.facebook.com/alejandro.scaffa" target="_blank"><img src="facebooklogo.png" id="icon" align="right"></a>
+
 <a href="https://alejandroscaffa.wordpress.com/" target="_blank"><img src="wordpresslogo.png" id="icon" align="right"></a>
 <a href="https://twitter.com/alescaffa" target="_blank"><img src="twitterlogo.png" id="icon" align="right"></a>
+<a href="https://www.linkedin.com/in/alejandroscaffa" target="_blank"><img src="linkedinlogo.png" id="icon" align="right"></a>
 <br>
 
 <!-- <a href="https://www.linkedin.com/in/alejandroscaffa" style="text-decoration:none;"><span style="font: 180% Arial,sans-serif; color:#0783B6;"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/LinkedIn_Logo.svg/291px-LinkedIn_Logo.svg.png" width="97" height="26.33" alt="View Alejandro Scaffa's LinkedIn profile" style="vertical-align:middle;" border="0">&nbsp;www.linkedin.com/in/alejandroscaffa/</span></a><br><br>  -->
-<!-- EMAIL FORM START  -->
+<!-- EMAIL FORM START  
 <style>
 p{padding:0;margin:0;}
 body{padding:0;margin:0;}
@@ -55,15 +55,18 @@ body{padding:0;margin:0;}
 </form>
 
 
-<!-- EMAIL FORM END  -->
+ EMAIL FORM END  -->
 
  <!--  <p><img src="https://upload.wikimedia.org/wikipedia/en/thumb/e/ec/Gmail_Logo.svg/256px-Gmail_Logo.svg.png" align="left" width="32" height="24.25" hspace="10"></p> <p> alejandro UNDERSCORE scaffa AT brown DOT edu </p> -->
 
 
 <br>
+ <h3> Email Address: </h3>
+ <p> alejandro UNDERSCORE scaffa AT brown DOT edu</p> 
+
     
     <h3> Mail Address: </h3>
-      Brown University Molecular Medicine <br>
+      <p>Brown University Molecular Medicine <br>
       70 Ship Street  <br>
       4th floor, Room 413 <br>
       Providence, RI 02903 </p>
