--- a/research.html
+++ b/research.html
@@ -29,7 +29,7 @@
 <div class="neighborhood-guides"> 
     <div class="container">
         <h2> What is Splicing and why should we study it? </h2>
-  I know what splicing is, take me to <a href="#Research">Research</a>
+  I know what splicing is, take me to <a href="#Research">current projects</a> below
         <p> 
           <p style="text-align:center;"><img src="https://upload.wikimedia.org/wikipedia/commons/8/81/0326_Splicing.jpg"></p>
           <p style="text-align:center;"> Spliceosome performing pre-mRNA splicing</p>
@@ -51,14 +51,15 @@ The CRISPR-Cas9 system is an RNA guided DNA cleaving gene editing tool. The syst
 <li> <p>Cas 9: A double-stranded DNA cleaving endonuclease called</p></li>
 
 <br>
-<li> <p>guideRNA: a 23-nucleotide oligo, required to end in 'NGG</p></li>
+<li> <p>sgRNA: a 23-nucleotide guideRNA, required to end in 'NGG attached to a cr/tracrRNA complex that aligns and helps the guideRNA and Cas9 to interact </p></li>
 <br>
-<li> <p>cr/tracrRNA: a fused RNA complex that aligns and helps the gRNA and Cas9 to interact.</p></li>
 </un>
 <br>
 <br>
 
 <p style="text-align:center;"><img src="http://www.aati-us.com/images/crispr-dual-editing-method.png"></p>
+          <p style="text-align:center;"> CRISPR-Cas9: A gene editing tool that allows for knock-in and knock-out mutations.</p>
+
 
   </body>
 </html>
@@ -78,6 +79,7 @@ We are currently knocking-in mutations that are related to Autism Spectrum Disor
     <div class="container">
         <h2> Finding the role of splicing in Autism Spectrum Disorder </h2>
        <p style="text-align:center;"><img src="http://cf.ltkcdn.net/autism/images/std/156201-425x339-autism-brain.jpg"></p>
+       <p style="text-align:center;"> Autism and some of its symptoms.</p>
 <p> Autism Spectrum Disorder (ASD) is a class of neurodevelopmental disorders that manifest by communication and social impairments as well as repetitive behaviors. As of 2014, 1 in 68 children were diagnosed with ASD, with almost 80% being male.  Although the molecular basis for autism have not been fully elucidated, the Simon's Foundation for Autism Research Initiative (SFARI) has funded research that allowed for the characterization of over 5000 denovo  and over 85000 inherited genetic variants that are ASD related, as well as SFARI gene, a scoring database for over 300 genes that are most likely to play a role in ASD.<br>
 
 </p>
