--- a/Awards.html
+++ b/Awards.html
@@ -23,7 +23,7 @@
       <div class="container">
         <ul class="pull-left">
           <li><a href="about.html">About Me</a></li>
-          <li><a href="resume.html">Resume</a></li>
+          <li><a href="Scaffa CV Nov 2015.pdf">Resume</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="https://alejandroscaffa.wordpress.com/"target="_blank">Blog</a></li>
 
@@ -75,7 +75,7 @@
 </a>
   </div>
   <div class="thumbnail">
-    <a href="resume.html">
+    <a href="Scaffa CV Nov 2015.pdf">
   <img src="resume.png" style="height:300px;width:300px;" >
 </a>
   </div> 
