--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@
       <div class="container">
         <ul class="pull-left">
           <li><a href="about.html">About Me</a></li>
-          <li><a href="resume.html" style="color:red">Resume</a></li>
+          <li><a href="Scaffa CV Nov 2015.pdf" style="color:red">Resume</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="https://alejandroscaffa.wordpress.com/" target="_blank">Blog</a></li>
 
@@ -58,7 +58,7 @@
 </a>
   </div>
 
-
+<!--
   <SCRIPT>
 function passWord() {
 var testV = 1;
@@ -85,10 +85,10 @@ return " ";
 <input type="button" value="Enter Protected Area" onClick="passWord()">
 </FORM>
 </CENTER>
-
+-->
 
   <div class="thumbnail">
-    <a href="resume.html">
+    <a href="Scaffa CV Nov 2015.pdf">
   <img src="resume.png" style="height:300px;width:300px;opacity:0.3;filter:alpha(opacity=60);" >
 </a>
   </div> 
