--- a/Awards.html
+++ b/Awards.html
@@ -29,7 +29,7 @@
 
         </ul>
         <ul class="pull-right">
-          <li><a href="publications.html">Publications</a></li>
+          <li><a href="publications.html">Published Work</a></li>
           <li><a href="research.html">Research</a></li>
           <li><a href="Awards.html"style="color:red">Awards</a></li>
         </ul>
@@ -48,7 +48,8 @@
 <li><p>1st Prize in Biochemistry </p></li>
 <li><p>Best of Category </p></li>
 <li><p>Naming rights of a <a href="http://ssd.jpl.nasa.gov/sbdb.cgi?26393">minor planet</a> </p></li>
-
+<br><br>
+<hr style="margin-top: 5px; height: 2px; border: none; background: #808080;"/>
 
 <br>
 <br>
