--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 
         </ul>
         <ul class="pull-right">
-          <li><a href="publications.html">Publications</a></li>
+          <li><a href="publications.html">Published Work</a></li>
           <li><a href="research.html">Research</a></li>
           <li><a href="Awards.html">Awards</a></li>
         </ul>
@@ -52,7 +52,15 @@
         <p>I am originally from <a href="http://travel.nationalgeographic.com/travel/countries/argentina-facts/">Argentina</a> but I lived in <a href="http://travel.nationalgeographic.com/travel/countries/brazil-facts/">Brazil</a> since age 8. I have a biochemistry degree from <a href="https://www.grinnell.edu/about/rankings">Grinnell College</a> in Iowa.  </p>
         <p>Currently, I am doing research on how <a href="http://genesdev.cshlp.org/content/17/4/419.full.pdf+html">splicing plays a role in genetic diseases</a>. I am working on developing better high throughput splicing assays to study thousands of genetic variants in one go. We are using CRISPR to generate model of diseases in human cell lines to further study splicing and prove the accuracy of the high throughput assays.
 </p>
-<br><br><br>
+
+<br><br>
+<br><br>
+
+
+<hr style="margin-top: 5px; height: 2px; border: none; background: #808080;"/>
+
+<br>
+<br>
         <div class ="row">
             <div class="col-md-4">
                 <div class="thumbnail">
