--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 
         </ul>
         <ul class="pull-right">
-          <li><a href="publications.html">Publications</a></li>
+          <li><a href="publications.html">Published Work</a></li>
           <li><a href="research.html">Research</a></li>
           <li><a href="Awards.html">Awards</a></li>
         </ul>
@@ -81,10 +81,10 @@ body{padding:0;margin:0;}
       70 Ship Street  <br>
       4th floor, Room 413 <br>
       Providence, RI 02903 </p>
-      <br>
-      <br>
-       
-<br>
+
+<br><br>
+<hr style="margin-top: 5px; height: 2px; border: none; background: #808080;"/>
+<br><br>
 
         
         <div class ="row">
