--- a/publications.html
+++ b/publications.html
@@ -28,7 +28,7 @@
           <li><a href="https://alejandroscaffa.wordpress.com/"target="_blank">Blog</a></li>
         </ul>
         <ul class="pull-right">
-          <li><a href="publications.html" style="color:red">Publications</a></li>
+          <li><a href="publications.html" style="color:red">Published Work</a></li>
           <li><a href="research.html">Research</a></li>
           <li><a href="Awards.html">Awards</a></li>
         </ul>
@@ -47,8 +47,9 @@
 <br>
 <p> &quot;Characterization of Neuronal and Torpedo Nicotinic Acetylcholine Receptor via Liquid Chromatography Mass Spectrometry&quot;. Midstates Consortium for Math and Science, University of Chicago, Oct. 2013</p>
 </p>
-<br>
-<br>
+<br><br>
+<hr style="margin-top: 5px; height: 2px; border: none; background: #808080;"/>
+<br><br>
 
         
         <div class ="row">
