--- a/research.html
+++ b/research.html
@@ -30,7 +30,7 @@
 
         </ul>
         <ul class="pull-right">
-          <li><a href="publications.html">Publications</a></li>
+          <li><a href="publications.html">Published Work</a></li>
           <li><a href="research.html" style="color:red">Research</a></li>
           <li><a href="Awards.html">Awards</a></li>
         </ul>
@@ -94,8 +94,9 @@ We are currently knocking-in mutations that are related to Autism Spectrum Disor
 
 </p>
 
-<br>
-<br>
+<br><br>
+<hr style="margin-top: 5px; height: 2px; border: none; background: #808080;"/>
+<br><br>
 
         
         <div class ="row">
