--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
 
         </ul>
         <ul class="pull-right">
-          <li><a href="publications.html">Publications</a></li>
+          <li><a href="publications.html">Published Work</a></li>
           <li><a href="research.html">Research</a></li>
           <li><a href="Awards.html">Awards</a></li>
         </ul>
