--- a/Awards.html
+++ b/Awards.html
@@ -12,7 +12,7 @@
 </script>
   <head>
     
-    <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
+    <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="main.css">
     
   </head>
