--- a/about.html
+++ b/about.html
@@ -11,9 +11,8 @@
 
 </script>
   <head>
-
     
-    <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
+    <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="main.css">
     
   </head>
