--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@
   <head>
 
     
-    <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
+    <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="main.css">
     
   </head>
