--- a/research.html
+++ b/research.html
@@ -40,14 +40,14 @@
         <h2> What is Splicing and why should we study it? </h2>
   I know what splicing is, take me to <a href="#Research">current projects</a> below
         <p> 
-          <p style="text-align:center;"><img src="https://upload.wikimedia.org/wikipedia/commons/8/81/0326_Splicing.jpg"></p>
+          <p style="text-align:center;"><img src="splicing_expl_ori.jpg"></p>
           <p style="text-align:center;"> Spliceosome performing pre-mRNA splicing</p>
 <p> The majority of genes in humans contain non-coding sequences, called introns, and coding sequences, the exons.  Pre-mRNA splicing is the process by which precursor mRNA (pre-mRNA) is converted into mature RNA (mRNA) by the removal of its introns and the ligation of the coding exons by the spliceosome machinery. The spliceosome is a large complex of proteins that carries out splicing co-transcriptionally. The U2 spliceosome, the most abundant in humans, is composed of five small nuclear RNAs (snRNAs) called U1, U2, U4, U5, and U6, and many other helper proteins. snRNAs recognize motifs in DNA sequence that define the intron and therefore guide the spliceosome to correct cleaveage. The most important motifs are the 5' splice site (5'SS) which denotes the beginning of the intron by GT, the 3' splice site (3'SS) which denotes the end of the intron by an AG sequence, and the branch point (an A usually 30-40 nucleotides away of the 3'SS into the intron).  
   <br>
   <p style="text-align:center;"><img src="splicesites.png"></p>
           <p style="text-align:center;"> Splice site motifs</p>
 <p>Even though the introns are defined by the splice sites, splicing is highly context dependent. There are many DNA motifs (cis-elements) and proteins (trans-elements) that play a role in how the spliceosome carries out splicing. Alternative splicing is when the spliceosome doesn't carry out splicing canonically where all introns are removed and all exons ligated.  About 95% of human genes undergo alternative splicing. Alternative splicing serves the purpose to increase the number of mRNA products any one gene can produce, as it allows for skipping exons or adding introns into mRNA. That, in turn, may destroy the function of the protein the mRNA codes for or even give it a different function.<br>
-<p style="text-align:center;"><img src="https://www.uni-giessen.de/fbz/fb08/Inst/biochem/bindereif/research/img/03"></p>
+<p style="text-align:center;"><img src="alt_splicing_ori.jpg"></p>
           <p style="text-align:center;"> Alternative splicing may create functionally different proteins!</p>
 <p>This brings us to the reason of why to study splicing. 1/3 of all disease causing genetic mutations are splicing related, so, one must study splicing in order to better understand the underlaying causes for this diseases. Furthermore, alternative splicing is a reversible process, which means that by studying how mutations affect the spliceosome, one might even find novel drug targets.<br><br>
 <div class="neighborhood-guides"> 
@@ -66,7 +66,7 @@ The CRISPR-Cas9 system is an RNA guided DNA cleaving gene editing tool. The syst
 <br>
 <br>
 
-<p style="text-align:center;"><img src="http://www.aati-us.com/images/crispr-dual-editing-method.png"></p>
+<p style="text-align:center;"><img src="crispr_ori.png"></p>
           <p style="text-align:center;"> CRISPR-Cas9: A gene editing tool that allows for knock-in and knock-out mutations.</p>
 
 
@@ -87,7 +87,7 @@ We are currently knocking-in mutations that are related to Autism Spectrum Disor
 <div class="neighborhood-guides"> 
     <div class="container">
         <h2> Finding the role of splicing in Autism Spectrum Disorder </h2>
-       <p style="text-align:center;"><img src="http://cf.ltkcdn.net/autism/images/std/156201-425x339-autism-brain.jpg"></p>
+       <p style="text-align:center;"><img src="autism_ori.jpg"></p>
        <p style="text-align:center;"> Autism and some of its symptoms.</p>
 <p> Autism Spectrum Disorder (ASD) is a class of neurodevelopmental disorders that manifest by communication and social impairments as well as repetitive behaviors. As of 2014, 1 in 68 children were diagnosed with ASD, with almost 80% being male.  Although the molecular basis for autism have not been fully elucidated, the Simon's Foundation for Autism Research Initiative (SFARI) has funded research that allowed for the characterization of over 100000 denovo and inherited genetic variants that are ASD related, as well as SFARI gene, a scoring database for over 300 genes that are most likely to play a role in ASD. We will deeply study the effects of these variants in splicing, as well as elucidate the reason for their effects, using our high throughput studies and computational analysis approaches.<br>
 
