december update of everything

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
       <div class="container">
         <ul class="pull-left">
           <li><a href="about.html">About Me</a></li>
-          <li><a href="Scaffa CV Nov 2015.pdf">Resume</a></li>
+          <li><a href="Scaffa_CV.pdf">Resume</a></li>
           <li><a href="contact.html" style="color:red">Contact</a></li>
           <li><a href="https://alejandroscaffa.wordpress.com/" target="_blank">Blog</a></li>
 
@@ -76,10 +76,10 @@ body{padding:0;margin:0;}
 <button data-copytarget="#website">copy</button>
 -->
     <h3> Mail Address: </h3>
-      <p>Brown University Molecular Medicine <br>
-      70 Ship Street  <br>
-      4th floor, Room 413 <br>
-      Providence, RI 02903 </p>
+      <p>Brown University Sidney Frank Hall <br>
+      165 Meeting Street  <br>
+      2nd floor, Room 235 <br>
+      Providence, RI 02912 </p>
 
 <br><br>
 <hr style="margin-top: 5px; height: 2px; border: none; background: #808080;"/>
@@ -107,7 +107,7 @@ body{padding:0;margin:0;}
 </a>
   </div>
   <div class="thumbnail">
-    <a href="Scaffa CV Nov 2015.pdf">
+    <a href="Scaffa_CV.pdf">
   <img src="resume.png" style="height:300px;width:300px;" >
 </a>
   </div> 
