--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
       <div class="container">
         <ul class="pull-left">
           <li><a href="about.html">About Me</a></li>
-          <li><a href="Scaffa CV Nov 2015.pdf" style="color:red">Resume</a></li>
+          <li><a href="Scaffa_CV.pdf" style="color:red">Resume</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="https://alejandroscaffa.wordpress.com/" target="_blank">Blog</a></li>
 
@@ -67,7 +67,7 @@ if (!pass1)
 history.go(-1);
 if (pass1.toLowerCase() == "letmein") {
 alert('You Got it Right!');
-window.open('Scaffa CV Nov 2015.pdf');
+window.open('Scaffa_CV.pdf');
 break;
 } 
 testV+=1;
@@ -87,7 +87,7 @@ return " ";
 -->
 
   <div class="thumbnail">
-    <a href="Scaffa CV Nov 2015.pdf">
+    <a href="Scaffa_CV.pdf">
   <img src="resume.png" style="height:300px;width:300px;opacity:0.3;filter:alpha(opacity=60);" >
 </a>
   </div> 
