--- a/publications.html
+++ b/publications.html
@@ -1,17 +1,8 @@
 <!DOCTYPE html>
 <html>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-76627208-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
   <head>
-
+    <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
     
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
     <link rel="stylesheet" href="main.css">
@@ -23,12 +14,12 @@
       <div class="container">
         <ul class="pull-left">
           <li><a href="about.html">About Me</a></li>
-          <li><a href="Scaffa CV Nov 2015.pdf">Resume</a></li>
+          <li><a href="Scaffa_CV.pdf">Resume</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="https://alejandroscaffa.wordpress.com/"target="_blank">Blog</a></li>
         </ul>
         <ul class="pull-right">
-          <li><a href="publications.html" style="color:red">Published Work</a></li>
+          <li><a href="publications.html" style="color:red">Publications</a></li>
           <li><a href="research.html">Research</a></li>
           <li><a href="Awards.html">Awards</a></li>
         </ul>
@@ -47,9 +38,8 @@
 <br>
 <p> &quot;Characterization of Neuronal and Torpedo Nicotinic Acetylcholine Receptor via Liquid Chromatography Mass Spectrometry&quot;. Midstates Consortium for Math and Science, University of Chicago, Oct. 2013</p>
 </p>
-<br><br>
-<hr style="margin-top: 5px; height: 2px; border: none; background: #808080;"/>
-<br><br>
+<br>
+<br>
 
         
         <div class ="row">
@@ -73,7 +63,7 @@
 </a>
   </div>
   <div class="thumbnail">
-    <a href="Scaffa CV Nov 2015.pdf">
+    <a href="Scaffa_CV.pdf">
   <img src="resume.png" style="height:300px;width:300px;" >
 </a>
   </div> 
