--- a/index.html
+++ b/index.html
@@ -1,18 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-76627208-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
   <head>
-
+    <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
     
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
     <link rel="stylesheet" href="main.css">
@@ -24,13 +14,13 @@
       <div class="container">
         <ul class="pull-left">
           <li><a href="about.html" style="color:red">About Me</a></li>
-          <li><a href="Scaffa CV Nov 2015.pdf">Resume</a></li>
+          <li><a href="Scaffa_CV.pdf">Resume</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="https://alejandroscaffa.wordpress.com/" target="_blank">Blog</a></li>
 
         </ul>
         <ul class="pull-right">
-          <li><a href="publications.html">Published Work</a></li>
+          <li><a href="publications.html">Publications</a></li>
           <li><a href="research.html">Research</a></li>
           <li><a href="Awards.html">Awards</a></li>
         </ul>
@@ -40,7 +30,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Alejandro Scaffa</h1>
-        <p>Deciphering the role of splicing in disease with high throughput techniques and CRISPR</p>
+        <p>Deciphering the Role of Hyperoxia Induced Senescence in Bronchopulmonary Displasia</p>
       </div>
     </div> 
 
@@ -48,15 +38,12 @@
     <div class="container">
         <h2> In a nutshell...</h2>
         <p><img src="me.png" align="left" style="PADDING-LEFT:5px; PADDING-RIGHT:10px; PADDING-BOTTOM:30px; PADDING-TOP:10px"></p>
-        <p> I am a second year PhD student at the <a href="https://www.brown.edu/academics/molecular-pharmacology-physiology-and-biotechnology/graduate-programs/molecular-pharmacology-physiology-graduate-program-mpp">Department Molecular Pharmacology and Physiology</a>, at <a href="http://www.brown.edu/">Brown University</a>. My advisor is <a href="http://fairbrother.biomed.brown.edu/research.php">William Fairbrother, Ph.D</a>, and I do research in <a href="https://en.wikipedia.org/wiki/RNA_splicing/">RNA splicing</a> and <a href="https://en.wikipedia.org/wiki/CRISPR">CRISPR</a>. </p>
+        <p> I am a fourth year PhD student at the <a href="https://www.brown.edu/academics/molecular-pharmacology-physiology-and-biotechnology/graduate-programs/molecular-pharmacology-physiology-graduate-program-mpp">Department Molecular Pharmacology and Physiology</a>, at <a href="http://www.brown.edu/">Brown University</a>. My advisor is <a href="https://vivo.brown.edu/display/pdennery">Phyllis Dennery, M.D.</a>, and I do research in <a href="http://www.lung.org/lung-health-and-diseases/lung-disease-lookup/bronchopulmonary-dysplasia/learn-about-bpd.html?referrer=https://www.google.com/">Bronchopulmonary Displasia (BPD)</a> and <a href="https://en.wikipedia.org/wiki/Senescence">Senescence</a>. I have a strong background in genetics, CRISPR, and biochemistry.</p>
 
         <p>I am originally from <a href="http://travel.nationalgeographic.com/travel/countries/argentina-facts/">Argentina</a> but I lived in <a href="http://travel.nationalgeographic.com/travel/countries/brazil-facts/">Brazil</a> since age 8. I have a biochemistry degree from <a href="https://www.grinnell.edu/about/rankings">Grinnell College</a> in Iowa.  </p>
-        <p>Currently, I am doing research on how <a href="http://genesdev.cshlp.org/content/17/4/419.full.pdf+html">splicing plays a role in genetic diseases</a>. I am working on developing better high throughput splicing assays to study thousands of genetic variants in one go. We are using CRISPR to generate model of diseases in human cell lines to further study splicing and prove the accuracy of the high throughput assays.
+        <p>Currently, I am doing research on how hyperoxia induced senescence plays a role in bronchopulmonary displasia. In more detail, I am looking at how hyperoxia induced senescence changes the behavior of oncogene p53, a tumor supressor that helps induce senescence. I hope to understand the different roles of p53 on the metabolome and to further comprehend the role of these senescent cells in BPD.
 </p>
-<br><br><br><br>
-
-<hr style="margin-top: 5px; height: 2px; border: none; background: #808080;"/>
-<br><br>
+<br><br><br>
         <div class ="row">
             <div class="col-md-4">
                 <div class="thumbnail">
@@ -79,7 +66,7 @@
 </a>
   </div>
   <div class="thumbnail">
-    <a href="Scaffa CV Nov 2015.pdf">
+    <a href="Scaffa_CV.pdf">
   <img src="resume.png" style="height:300px;width:300px;" >
 </a>
   </div> 
