--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Alejandro Scaffa</h1>
-        <p>Deciphering the Role of Hyperoxia Induced Senescence in Bronchopulmonary Displasia</p>
+        <p>Deciphering the Role of Hyperoxia Induced Senescence in Bronchopulmonary Dysplasia</p>
       </div>
     </div> 
 
