--- a/research.html
+++ b/research.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-76627208-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
   <head>
     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
@@ -33,22 +43,27 @@
         <p> 
           <p style="text-align:center;"><img src="https://upload.wikimedia.org/wikipedia/commons/8/82/CXR_-_Bronchopulmonary_dysplasia.jpg"height="315" width="344"></p>
           <p style="text-align:center;"> a radiograph of BPD (source: wikipedia)</p>
-<p> Bronchopulmonary Displasia is a lung disease developed often by underweight premature babies. These babies often go through stress from prematurity and birth often causing Respiratory Distress Syndrome, a disease that usually precedes BPD. A factor that further places a child at risk for BPD is mechanical oxygen ventilation, which although life saving it does not come without its setbacks. Mild BPD can cause some dependancy on ventilation and low blood oxygen levels. Yet, when severe, this chronic disorder can cause severe inflamation and scarring leading to problems in lung development and even neurological complications that can even cause  visual, auditory, and learning disabilities. 
+<p> Bronchopulmonary Displasia is a lung disease developed often by underweight premature babies. These babies often go through stress from prematurity and birth often causing Respiratory Distress Syndrome, a disease that usually precedes BPD. A factor that further places a child at risk for BPD is mechanical oxygen ventilation, which although life saving it does not come without its setbacks. Mild BPD can cause some dependancy on ventilation and low blood oxygen levels. Yet, when severe, this leads to problems in lung development and even neurological complications that can even cause  visual, auditory, and learning disabilities. </p>
+<p> It's important to note that BPD is also called Chronic Lung Disease (CLD) of Prematurity.
+
   <br>
           <h2> How does Senescence relate to BPD?</h2>
             <p style="text-align:center;"><img src="senescence.png"height="277" width="734"></p>
           <p style="text-align:center;"> Stains for SA-B-Gal a marker of senescence, senescent cells on right (source: wikipedia)</p>
 
-<p>Senescence is a natural biological function that switches the cell from its regular proliferative state to non-proliferative, meaning that the cell ceases to divide. Senescence, which is permanent, can be caused by a multitude of reasons such as age of the cell, telomere shortening, DNA damage, and/or stress. Becaus the cells cannot proliferate after senescence, it is a powerful tool against cancer, as it will prevent the unlimited proliferation seen in cancer. Yet, agressive cancers have found ways around senescence.
-Senescence relates to BPD given that hyperoxia induces senescence. High levels of oxygen are seen by babies with BPD because of their need for mechanical ventilation. Interestingly, cells under senescence will still be highly active, which begs the question as to whether they are protective or harmful in the pathology of BPD. Understanding BPD and the effects of senescence on it is of high impact to the field because we could help neonatal babies going through this detrimental disease, this is why we are interested in studying the effects of hyperoxia induced senescence in BPD. <br>
+<p>Senescence is a natural biological function that switches the cell from its regular proliferative state to non-proliferative, meaning that the cell ceases to divide. Senescence can be caused by a multitude of reasons such as age of the cell, telomere shortening, DNA damage, and/or stress. Becaus the cells cannot proliferate after senescence, it is a powerful tool against cancer, as it will prevent the unlimited proliferation seen in cancer. Yet, agressive cancers usually find ways around senescence.
+Senescence relates to BPD because hyperoxia induces senescence. Interestingly, cells under senescence will still be highly metabolically active, which begs the question as to whether they are protective or harmful in the pathology of BPD. Understanding BPD and the effects of senescence on it is high importance to the field because we could help neonatal babies going through this detrimental disease. This is why we are interested in studying the effects of hyperoxia induced senescence in BPD. <br>
 <br><br>
 
 <div class="neighborhood-guides"> 
     <div class="container">
         <h2 id="Research"> Finding the role of hyperoxia induced senescence in the metabolism of lung cells </h2>
        <p style="text-align:center;"><img src="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4310776/bin/acel0014-0001-f1.jpg" height="370" width="467"></p>
-       <p style="text-align:center;"> Perturbation of Mitochondrial Homeostasis leading to Senescecnce (source: Ziegler et al., 2014)</p>
-<p> BPD is a chronic lung disorder often seen in low weight premature babies that were born with Respiratory Distress Syndrome. This disorder is treated in part by mechanical ventilation which exposes the baby to hyperoxia. Hyperoxia can be a stressor, for example leading to oxidative damage, which may lead to hyperoxia induced senescence. As you can see on the figure above, many pathways lead to senescence, include those connected by the p16 and p53 tumor supressor oncogenes. We don't yet know the specific pathway in which hyperoxia triggers senescence, nor do we know what role senescence plays in BPD. My goal is to understand the impact of hyperoxia on markers of senescence and which metabolic shifts hyperoxia induced senescence causes. If you are interested in my research and want to learn more please contact me <a href="contact.html">here</a><br>
+       <p style="text-align:center;"> Perturbation of Mitochondrial Homeostasis leading to Senescence (source: Ziegler et al., 2014)</p>
+<p> BPD is a chronic lung disorder often seen in low weight premature babies that were born with Respiratory Distress Syndrome. This disorder is treated in part by mechanical ventilation which exposes the baby to hyperoxia. Hyperoxia can be a stressor, for example leading to oxidative damage, which may lead to hyperoxia induced senescence. Senescence in turn can play a detrimental role in disease (although senescence does have some benefits also). </p>
+<p> As you can see on the figure above, many pathways lead to senescence, including those connected by the p16, pRB, p21, and p53 tumor supressor oncogenes. I have described that in MLE-12 cells, alveolar epithelial type II cells, senescence is p53 dependent. The image above also shows metabolic pathway connections to p53 and senescence. This is of importance because hyperoxia is also known to modulate metabolism. My goal is to understand the effect of hyperoxia on alveolar lung cells, specifically surrounding p53, glycolysis, and senescence - and whether glycolysis and senescence are intertwined.
+
+If you are interested in my research and want to learn more please contact me <a href="contact.html">here</a>.<br>
 
 </p>
 
