--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
       <h2> Don't be shy!</h2>
 
 
-<a href="https://alejandroscaffa.wordpress.com/" target="_blank"><img src="wordpresslogo.png" id="icon" align="right"></a>
+<!-- <a href="https://alejandroscaffa.wordpress.com/" target="_blank"><img src="wordpresslogo.png" id="icon" align="right"></a> -->
 <a href="https://twitter.com/alescaffa" target="_blank"><img src="twitterlogo.png" id="icon" align="right"></a>
 <a href="https://www.linkedin.com/in/alejandroscaffa" target="_blank"><img src="linkedinlogo.png" id="icon" align="right"></a>
 <br>
@@ -77,7 +77,7 @@ body{padding:0;margin:0;}
 -->
     <h3> Mail Address: </h3>
       <p>Brown University Sidney Frank Hall <br>
-      165 Meeting Street  <br>
+      185 Meeting Street  <br>
       2nd floor, Room 235 <br>
       Providence, RI 02912 </p>
 
