--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-76627208-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
   <head>
     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
@@ -38,10 +48,13 @@
     <div class="container">
         <h2> In a nutshell...</h2>
         <p><img src="me.png" align="left" style="PADDING-LEFT:5px; PADDING-RIGHT:10px; PADDING-BOTTOM:30px; PADDING-TOP:10px"></p>
-        <p> I am a fourth year PhD student at the <a href="https://www.brown.edu/academics/molecular-pharmacology-physiology-and-biotechnology/graduate-programs/molecular-pharmacology-physiology-graduate-program-mpp">Department Molecular Pharmacology and Physiology</a>, at <a href="http://www.brown.edu/">Brown University</a>. My advisor is <a href="https://vivo.brown.edu/display/pdennery">Phyllis Dennery, M.D.</a>, and I do research in <a href="http://www.lung.org/lung-health-and-diseases/lung-disease-lookup/bronchopulmonary-dysplasia/learn-about-bpd.html?referrer=https://www.google.com/">Bronchopulmonary Displasia (BPD)</a> and <a href="https://en.wikipedia.org/wiki/Senescence">Senescence</a>. I have a strong background in genetics, CRISPR, and biochemistry.</p>
+        <p> I'm in my last year of PhD at the of <a href="https://www.brown.edu/academics/molecular-pharmacology-physiology-and-biotechnology/graduate-programs/molecular-pharmacology-physiology-graduate-program-mpp">Department Molecular Pharmacology and Physiology</a>, at <a href="http://www.brown.edu/">Brown University</a>. My advisor is <a href="https://vivo.brown.edu/display/pdennery">Phyllis Dennery, MD</a>, and under her mentorship I research <a href="http://www.lung.org/lung-health-and-diseases/lung-disease-lookup/bronchopulmonary-dysplasia/learn-about-bpd.html?referrer=https://www.google.com/">Bronchopulmonary Displasia (BPD)</a>, metabolism, and <a href="https://en.wikipedia.org/wiki/Senescence">senescence</a>. </p>
+        <p>I have a strong background in genetics, CRISPR, and biochemistry.</p>
+        <p>I'm curious, driven, a team player, and I'm passionate about innovative science.</p> 
 
-        <p>I am originally from <a href="http://travel.nationalgeographic.com/travel/countries/argentina-facts/">Argentina</a> but I lived in <a href="http://travel.nationalgeographic.com/travel/countries/brazil-facts/">Brazil</a> since age 8. I have a biochemistry degree from <a href="https://www.grinnell.edu/about/rankings">Grinnell College</a> in Iowa.  </p>
-        <p>Currently, I am doing research on how hyperoxia induced senescence plays a role in bronchopulmonary displasia. In more detail, I am looking at how hyperoxia induced senescence changes the behavior of oncogene p53, a tumor supressor that helps induce senescence. I hope to understand the different roles of p53 on the metabolome and to further comprehend the role of these senescent cells in BPD.
+        <p>I am originally from <a href="http://travel.nationalgeographic.com/travel/countries/argentina-facts/">Argentina</a> but I lived in <a href="http://travel.nationalgeographic.com/travel/countries/brazil-facts/">Brazil</a> since age 8. I have a biochemistry degree from <a href="https://www.grinnell.edu/about/rankings">Grinnell College</a> in Iowa. and a Master's degree in molecular pharmacology and physiology from Brown University. </p>
+        <p>Currently, I am doing <a href="research.html">research </a> on how hyperoxia induced senescence plays a role in bronchopulmonary displasia. 
+      <p> I'm open to job offers, eligible to work in USA, Argentina, Brazil, and Europe.
 </p>
 <br><br><br>
         <div class ="row">
