--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,10 @@
 
 </script>
   <head>
+    <link href="//s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
     
-    <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
-    <link rel="stylesheet" href="main.css">
-    
+    <link rel="stylesheet" href="//s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
+    <link rel="stylesheet" href="https://ascaffa.github.io/main.css">
   </head>
 
   <body>
