--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
     <div class="container">
         <h2> In a nutshell...</h2>
         <p><img src="me.png" align="left" style="PADDING-LEFT:5px; PADDING-RIGHT:10px; PADDING-BOTTOM:30px; PADDING-TOP:10px"></p>
-        <p> I'm in my last year of PhD at the of <a href="https://www.brown.edu/academics/molecular-pharmacology-physiology-and-biotechnology/graduate-programs/molecular-pharmacology-physiology-graduate-program-mpp">Department Molecular Pharmacology and Physiology</a>, at <a href="http://www.brown.edu/">Brown University</a>. My advisor is <a href="https://vivo.brown.edu/display/pdennery">Phyllis Dennery, MD</a>, and under her mentorship I research <a href="http://www.lung.org/lung-health-and-diseases/lung-disease-lookup/bronchopulmonary-dysplasia/learn-about-bpd.html?referrer=https://www.google.com/">Bronchopulmonary Displasia (BPD)</a>, metabolism, and <a href="https://en.wikipedia.org/wiki/Senescence">senescence</a>. </p>
+        <p> I'm in my last year of PhD at the of <a href="https://www.brown.edu/academics/molecular-pharmacology-physiology-and-biotechnology/graduate-programs/molecular-pharmacology-physiology-graduate-program-mpp">Department Molecular Pharmacology and Physiology</a>, at <a href="http://www.brown.edu/">Brown University</a>. My advisor is <a href="https://vivo.brown.edu/display/pdennery">Phyllis Dennery, MD</a>, and under her mentorship I research <a href="http://www.lung.org/lung-health-and-diseases/lung-disease-lookup/bronchopulmonary-dysplasia/learn-about-bpd.html?referrer=https://www.google.com/">Bronchopulmonary Displasia (BPD)</a>, metabolism, and <a href="https://en.wikipedia.org/wiki/Senescence">senescence</a>. See my <a href="research.html">research.</a> </p>
         <p>I have a strong background in genetics, CRISPR, and biochemistry.</p>
-        <p>I'm curious, driven, a team player, and I'm passionate about innovative science.</p> 
+        <p>I'm curious, driven, a team player, and I'm passionate about innovative science. Such as medical devices, high throughput drug discovery and development, and data science. I also find business development and startup exciting.</p> 
 
-        <p>I am originally from <a href="http://travel.nationalgeographic.com/travel/countries/argentina-facts/">Argentina</a> but I lived in <a href="http://travel.nationalgeographic.com/travel/countries/brazil-facts/">Brazil</a> since age 8. I have a biochemistry degree from <a href="https://www.grinnell.edu/about/rankings">Grinnell College</a> in Iowa. and a Master's degree in molecular pharmacology and physiology from Brown University. </p>
-        <p>Currently, I am doing <a href="research.html">research </a> on how hyperoxia induced senescence plays a role in bronchopulmonary displasia. 
-      <p> I'm open to job offers, eligible to work in USA, Argentina, Brazil, and Europe.
+        <p>I have a biochemistry BA from <a href="https://www.grinnell.edu/about/rankings">Grinnell College</a> in Iowa, and MA in molecular pharmacology and physiology from Brown University. </p>
+      <p> I'm open to job offers and eligible to work in USA, Argentina, Brazil, and Europe.
+</p>
 </p>
 <br><br><br>
         <div class ="row">
